<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/depart_time_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:text="@string/flight_departing_time"
                android:textColor="?attr/colorError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/watch"
                app:layout_constraintTop_toBottomOf="@+id/scheduled_label" />

            <ImageView
                android:id="@+id/watch"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/depart_time_left"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.338"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scheduled_label"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

            <TextView
                android:id="@+id/scheduled_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#8BC34A"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:text="@string/scheduled"
                android:textColor="@color/teal_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pnr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="#FFC107"
                android:paddingBottom="8dp"
                android:text="@string/pnr"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/depart_time_left" />

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="132dp"
                android:text="@string/first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/passenger_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/passenger_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name" />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="128dp"
                android:layout_marginLeft="128dp"
                android:layout_marginTop="132dp"
                android:text="@string/last_name"
                app:layout_constraintBottom_toBottomOf="@+id/first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/passenger_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="77dp"
                android:layout_marginLeft="77dp"
                android:layout_marginTop="1dp"
                android:text="@string/passenger_lastname"
                app:layout_constraintBottom_toBottomOf="@+id/passenger_name"
                app:layout_constraintStart_toEndOf="@+id/passenger_name"
                app:layout_constraintTop_toBottomOf="@+id/last_name" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="18dp"
                android:text="@string/age"
                app:layout_constraintBottom_toBottomOf="@+id/last_name"
                app:layout_constraintStart_toEndOf="@+id/last_name"
                app:layout_constraintTop_toBottomOf="@+id/pnr" />

            <TextView
                android:id="@+id/passanger_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="63dp"
                android:layout_marginLeft="63dp"
                android:layout_marginTop="1dp"
                android:text="@string/passanger_age"
                app:layout_constraintBottom_toBottomOf="@+id/passenger_lastname"
                app:layout_constraintStart_toEndOf="@+id/passenger_lastname"
                app:layout_constraintTop_toBottomOf="@+id/age" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="37dp"
                android:text="@string/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passenger_name" />

            <TextView
                android:id="@+id/flight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="94dp"
                android:gravity="center"
                android:text="@string/flight"
                app:layout_constraintBottom_toBottomOf="@+id/location"
                app:layout_constraintEnd_toStartOf="@+id/country"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/location"
                app:layout_constraintTop_toBottomOf="@+id/pnr"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="61dp"
                android:layout_marginLeft="61dp"
                android:layout_marginEnd="62dp"
                android:layout_marginRight="62dp"
                android:text="@string/country"
                app:layout_constraintBottom_toBottomOf="@+id/flight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/passanger_age" />

            <TextView
                android:id="@+id/airport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="34dp"
                android:text="@string/airport"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flight" />

            <TextView
                android:id="@+id/terminal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="220dp"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="77dp"
                android:text="@string/Terminal"
                app:layout_constraintBottom_toBottomOf="@+id/flight_name"
                app:layout_constraintStart_toEndOf="@+id/flight_name"
                app:layout_constraintTop_toBottomOf="@+id/number" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/airport" />

            <TextView
                android:id="@+id/department_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/department_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/department_time" />

            <TextView
                android:id="@+id/gate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="44dp"
                android:text="@string/gate"
                app:layout_constraintStart_toEndOf="@+id/seat"
                app:layout_constraintTop_toBottomOf="@+id/airport" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:text="@string/number"
                app:layout_constraintStart_toEndOf="@+id/seat_number"
                app:layout_constraintTop_toBottomOf="@+id/gate" />

            <TextView
                android:id="@+id/seat_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="116dp"
                android:layout_marginLeft="116dp"
                android:text="@string/seat_number"
                app:layout_constraintStart_toEndOf="@+id/time"
                app:layout_constraintTop_toBottomOf="@+id/seat" />

            <TextView
                android:id="@+id/flight_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="76dp"
                android:text="@string/flight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time" />

            <TextView
                android:id="@+id/terminal_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="184dp"
                android:layout_marginLeft="184dp"
                android:text="@string/terminal_number"
                app:layout_constraintBottom_toBottomOf="@+id/fli"
                app:layout_constraintStart_toEndOf="@+id/fli"
                app:layout_constraintTop_toBottomOf="@+id/terminal"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/seat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="45dp"
                android:text="@string/SEAT"
                app:layout_constraintBottom_toBottomOf="@+id/department_time"
                app:layout_constraintStart_toEndOf="@+id/department_time"
                app:layout_constraintTop_toBottomOf="@+id/airport" />

            <TextView
                android:id="@+id/fli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/flight_no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flight_name" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="218dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@android:drawable/ic_menu_mapmode" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>